@@ -56,6 +56,8 @@ v0.1.1
 
  * nukeEnv now sets the default output to jpg
 
+ * houdiniEnv now sets the exr compression to zips (zip, single scanline)
+
 v0.1.0
 ------
 
